[tool.poetry]
name = "autoresttest"
version = "0.1.0"
description = "AutoRestTest"
readme = "README.md"
packages = [{ include = "autoresttest", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

# Runtime dependencies
scikit-learn = "1.5.0"
numpy = "1.25.2"
scipy = "1.10.1"
gensim = "4.3.2"
openai = "1.109.1"
beautifulsoup4 = "4.12.3"
python-dotenv = "1.0.1"
prance = "23.6.21.0"
openapi-spec-validator = "0.7.1"
pydantic = "2.7.1"
tomli = "2.0.1"
httpx = "<0.28"
tqdm = "^4.66"

[tool.poetry.scripts]
autoresttest = "autoresttest.autoresttest:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.19.0,<2.0.0)",
    "pyright (>=1.1.407,<2.0.0)"
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
